# muxa-template

./: .env.template  .gitignore  Cargo.toml  readme.md  watch.sh
.moho/: route.mh
logs/: .gitignore
migrations/: 20220701192846_sessions.sql
src/: html.rs  lib.rs  main.rs  theme.rs
src/routes/: home.rs  mod.rs
static/css/: zephyr.css
