[package]
name = "muxa_template"
version = "0.1.0"
edition = "2021"

default-run = "muxa_template"

[dependencies]
muxa = { git = "https://github.com/annieversary/muxa", rev = "86bfc2512af108621250b4af7fc7d93d6d3a6f0e" }

axum = { version = "0.5.1", features = ["headers", "multipart"] }
axum-extra = { version = "0.2.1", features = ["typed-routing"] }
# bcrypt = "0.11" # using 0.11 cause 0.12 introduces zeroize, and it conflicts with sqlx
# chrono = "0.4.19"
dotenv = "0.15.0"
maud = { git = "https://github.com/annieversary/maud", rev = "5b0d0e4cd9be12603d3a4b3d375c624701033e02" }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "offline"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
# validator = { version = "0.14.0", features = ["derive"] }
