[package]
name = "muxa_template"
version = "0.1.0"
edition = "2021"

default-run = "muxa_template"

[dependencies]
muxa = { git = "https://github.com/annieversary/muxa", rev = "5a4ad32ad9fe46af0b4f29a308d292fbe8f653af" }
maud = { git = "https://github.com/annieversary/maud", rev = "e39cef7b14485d05146ea1e3da1d4b3c4e21aa9e" }

axum = { version = "0.6.1", features = ["headers", "multipart"] }
axum-extra = { version = "0.4.2", features = ["typed-routing"] }
# bcrypt = "0.11" # using 0.11 cause 0.12 introduces zeroize, and it conflicts with sqlx
# chrono = "0.4.19"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "offline"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
http = "0.2.8"
# validator = { version = "0.14.0", features = ["derive"] }
